Stretch to correct proportions

--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -7,8 +7,8 @@
 .work-bubble-left {
   float: left;
   padding-right: 20px;
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 250px;
 }
 .work-bubble-right {
     floar: right;
